@@ -6,21 +6,22 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class SoundgasmRipperTest extends RippersTest {
 
     @Test
     @Tag("flaky")
-    public void testSoundgasmURLs() throws IOException {
-        SoundgasmRipper ripper = new SoundgasmRipper(new URL("https://soundgasm.net/u/_Firefly_xoxo/Rambles-with-my-Lovense"));
+    public void testSoundgasmURLs() throws IOException, URISyntaxException {
+        SoundgasmRipper ripper = new SoundgasmRipper(new URI("https://soundgasm.net/u/_Firefly_xoxo/Rambles-with-my-Lovense").toURL());
         testRipper(ripper);
     }
 
     @Test
     @Tag("flaky")
-    public void testRedditSoundgasmURL() throws IOException {
-        RedditRipper ripper = new RedditRipper(new URL("https://www.reddit.com/r/gonewildaudio/comments/kn1bvj/f4m_mistress_controlled_my_lovense_while_i_tried/"));
+    public void testRedditSoundgasmURL() throws IOException, URISyntaxException {
+        RedditRipper ripper = new RedditRipper(new URI("https://www.reddit.com/r/gonewildaudio/comments/kn1bvj/f4m_mistress_controlled_my_lovense_while_i_tried/").toURL());
         testRipper(ripper);
     }
 }
