@@ -1,6 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.TheyiffgalleryRipper;
@@ -11,14 +13,14 @@ import org.junit.jupiter.api.Test;
 public class TheyiffgalleryRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testTheyiffgallery() throws IOException {
-        TheyiffgalleryRipper ripper = new TheyiffgalleryRipper(new URL("https://theyiffgallery.com/index?/category/4303"));
+    public void testTheyiffgallery() throws IOException, URISyntaxException {
+        TheyiffgalleryRipper ripper = new TheyiffgalleryRipper(new URI("https://theyiffgallery.com/index?/category/4303").toURL());
         testRipper(ripper);
     }
 
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://theyiffgallery.com/index?/category/4303");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://theyiffgallery.com/index?/category/4303").toURL();
         TheyiffgalleryRipper ripper = new TheyiffgalleryRipper(url);
         Assertions.assertEquals("4303", ripper.getGID(url));
     }
