@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.TwodgalleriesRipper;
 
@@ -11,9 +12,9 @@ import org.junit.jupiter.api.Test;
 public class TwodgalleriesRipperTest extends RippersTest {
     @Test
     @Disabled("https://github.com/RipMeApp/ripme/issues/182")
-    public void testTwodgalleriesRip() throws IOException {
+    public void testTwodgalleriesRip() throws IOException, URISyntaxException {
         TwodgalleriesRipper ripper = new TwodgalleriesRipper(
-                new URL("http://www.2dgalleries.com/artist/regis-loisel-6477"));
+                new URI("http://www.2dgalleries.com/artist/regis-loisel-6477").toURL());
         testRipper(ripper);
     }
 
